[project]
name = "dqn-asteroids"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ale-py>=0.11.1",
    "gymnasium[atari]>=1.2.0",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "matplotlib>=3.10.3",
    "moviepy>=2.2.1",
    "numpy<2.0",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "tqdm>=4.67.1",
]
